apps/chupa3/base/chupa3-svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: chupa3-svc
  namespace: chupa3
  annotations:
    external-dns.alpha.kubernetes.io/hostname: chupa3.diegoluisi.eti.br
  labels:
    app: chupa3
    backstage.io/kubernetes-id: chupa3
spec:
  type: ClusterIP
  ports:
  - name: tcp-node
    port: 8080
  selector:
    app: chupa3
