apps/chupa3/base/chupa3-vs.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: chupa3-vs
  namespace: chupa3
spec:
  gateways:
  - istio-system/istio-gateway
  hosts:
  - chupa3.diegoluisi.eti.br
  http:
  - name: primary
    route:
    - destination:
        host: chupa3-svc
      weight: 100
